Fix detail list height on mobile

--- a/app/styles/layout/_aside.scss
+++ b/app/styles/layout/_aside.scss
@@ -15,6 +15,7 @@ aside {
     margin: 0;
     padding: 0.5em;
     text-transform: uppercase;
+    @include mobile-only { grid-area: title; }
     @include desktop {
       position: sticky;
       top: 0;
@@ -22,6 +23,13 @@ aside {
   }
 
   @include mobile-only {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto 1fr;
+    grid-gap: 0 0;
+    grid-template-areas:
+      "title"
+      "list";
     position: fixed;
     top: 0;
     right: 0;
@@ -75,6 +83,7 @@ ul {
     width: 100%;
 
     @include mobile-only {
+      grid-area: list;
       max-height: 100vh;
       overflow: auto;
     }
